--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Ruchi",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1"
   },
   "browserslist": [
