--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "scripts": {
     "test": "jest",
+    "watch-test": "jest --watch",
+    "show": "jest --showConfig",
+    "clear-cache":"jest --clearCache",
     "start": "parcel index.html && parcel watch index.html",
     "build": "parcel build index.html"
   },
@@ -20,6 +23,14 @@
     "last 2 versions"
   ],
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^16.0.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.12.0",
     "postcss": "^8.4.38",
     "process": "^0.11.10",
